// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxOrdinalGroup renders 0 1`] = `
Array [
  .c0 {
  box-ordinal-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders function 1`] = `
Array [
  .c0 {
  box-ordinal-group: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders invalid theme path 1`] = `
Array [
  .c0 {
  box-ordinal-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders negative number 1`] = `
Array [
  .c0 {
  box-ordinal-group: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-ordinal-group: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-ordinal-group: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-ordinal-group: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-ordinal-group: July;
}

@media May {
  .c0 {
    box-ordinal-group: August;
  }
}

@media April {
  .c0 {
    box-ordinal-group: September;
  }
}

@media January {
  .c0 {
    box-ordinal-group: November;
  }
}

@media April {
  .c0 {
    box-ordinal-group: August;
  }
}

@media June {
  .c0 {
    box-ordinal-group: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: July;
}

@media May {
  .c0 {
    box-ordinal-group: August;
  }
}

@media April {
  .c0 {
    box-ordinal-group: September;
  }
}

@media January {
  .c0 {
    box-ordinal-group: November;
  }
}

@media April {
  .c0 {
    box-ordinal-group: August;
  }
}

@media June {
  .c0 {
    box-ordinal-group: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-ordinal-group: November;
  }
}

@media April {
  .c0 {
    box-ordinal-group: January;
  }
}

@media January {
  .c0 {
    box-ordinal-group: December;
  }
}

@media April {
  .c0 {
    box-ordinal-group: April;
  }
}

@media June {
  .c0 {
    box-ordinal-group: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-ordinal-group: November;
  }
}

@media April {
  .c0 {
    box-ordinal-group: January;
  }
}

@media January {
  .c0 {
    box-ordinal-group: December;
  }
}

@media April {
  .c0 {
    box-ordinal-group: April;
  }
}

@media June {
  .c0 {
    box-ordinal-group: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-ordinal-group: July;
  }
}

@media April {
  .c0 {
    box-ordinal-group: August;
  }
}

@media January {
  .c0 {
    box-ordinal-group: September;
  }
}

@media April {
  .c0 {
    box-ordinal-group: November;
  }
}

@media June {
  .c0 {
    box-ordinal-group: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-ordinal-group: July;
  }
}

@media April {
  .c0 {
    box-ordinal-group: August;
  }
}

@media January {
  .c0 {
    box-ordinal-group: September;
  }
}

@media April {
  .c0 {
    box-ordinal-group: November;
  }
}

@media June {
  .c0 {
    box-ordinal-group: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-ordinal-group: January;
  }
}

@media April {
  .c0 {
    box-ordinal-group: December;
  }
}

@media January {
  .c0 {
    box-ordinal-group: April;
  }
}

@media April {
  .c0 {
    box-ordinal-group: May;
  }
}

@media June {
  .c0 {
    box-ordinal-group: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-ordinal-group: January;
  }
}

@media April {
  .c0 {
    box-ordinal-group: December;
  }
}

@media January {
  .c0 {
    box-ordinal-group: April;
  }
}

@media April {
  .c0 {
    box-ordinal-group: May;
  }
}

@media June {
  .c0 {
    box-ordinal-group: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders postitive number 1`] = `
Array [
  .c0 {
  box-ordinal-group: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders string 1`] = `
Array [
  .c0 {
  box-ordinal-group: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxOrdinalGroup renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxOrdinalGroup renders valid theme path 1`] = `
Array [
  .c0 {
  box-ordinal-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-ordinal-group: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
